syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package CareerCloud.gRPC;
service SystemCountryCode {
	rpc ReadSystemCountryCode(IdRequestCountryCode) returns (SystemCountryCodePayload);
	rpc CreateSystemCountryCode(SystemCountryCodePayload) returns (google.protobuf.Empty);
	rpc UpdateSystemCountryCode(SystemCountryCodePayload) returns (google.protobuf.Empty);
	rpc DeleteSystemCountryCode(SystemCountryCodePayload) returns (google.protobuf.Empty);
}

message IdRequestCountryCode{
		string Code=1;
	}

	message SystemCountryCodePayload {
		 string Code = 1;
         string Name = 2;
	}